--- a/app/views/builder/_social-share.html.erb
+++ b/app/views/builder/_social-share.html.erb
@@ -5,7 +5,7 @@ stLight.options({publisher:'ac9391da-2465-423f-a4e3-2c9736d44738'});
 
 <% 
 curl = "http://www.yomobi.com"
-title = u "Yomobi - The Ultimate Mobile Website Builder"
+title = u "YoMobi - The Ultimate Mobile Website Builder"
 %>
 
 <ul class="social-share">
