--- a/app/views/layouts/mobile_basic.slim
+++ b/app/views/layouts/mobile_basic.slim
@@ -10,6 +10,6 @@ html lang="en-US"
     #mobile-container
       #header
         .content
-          #logo Yomobi
+          #logo YoMobi
       #main-content
         = yield
