--- a/app/views/mobile/_social-share.html.erb
+++ b/app/views/mobile/_social-share.html.erb
@@ -1,6 +1,6 @@
 <% 
 curl = u @company.mobile_url
-title = u "#{@company.name}'s Mobile Website - Yomobi"
+title = u "#{@company.name}'s Mobile Website - YoMobi"
 %>
 
 <ul class="social-share">
