--- a/app/views/registrations/new.slim
+++ b/app/views/registrations/new.slim
@@ -1,6 +1,6 @@
 = form_for resource, :as => resource_name, :url => registration_path(resource_name), :html => { :class => 'center-box', :id => 'signin-box' } do |f|
   
-  h2 Yomobi Email
+  h2 YoMobi Email
 
   - if @user.errors
     .login-error
