--- a/app/views/user_mailer/call_back.html.erb
+++ b/app/views/user_mailer/call_back.html.erb
@@ -1,4 +1,4 @@
-Thanks for using Yomobi. A customer has left a message and requested that you call back at (<%=@params[:customer_phone] %>). Here's what he/she said:
+Thanks for using YoMobi. A customer has left a message and requested that you call back at (<%=@params[:customer_phone] %>). Here's what he/she said:
 <br /><br />
 <blockquote><%= @params[:customer_message] %></blockquote>
 <br /><br />
