--- a/app/views/user_mailer/leave_msg.html.erb
+++ b/app/views/user_mailer/leave_msg.html.erb
@@ -1,4 +1,4 @@
-Thanks for using Yomobi. A customer has given you feedback using your mobile Yomobi website! Here's what he/she said:
+Thanks for using YoMobi. A customer has given you feedback using your mobile YoMobi website! Here's what he/she said:
 <br /><br />
 <blockquote>Subject: <%= @params[:customer_subject] %></blockquote>
 <blockquote><%= @params[:customer_feedback] %></blockquote>
