--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -354,10 +354,21 @@
     font-size: 14px
 
 #dialog-confirm
+  input[type=text]
+    width: 97%
+    margin: 1px 0px 6px 0px
+  textarea
+    margin-left: 1px
+    margin-right: 1px
+    width: 97%
+    margin-top: 1px
+    margin-bottom: 1px
+    height: 5em
   .error
     color: #880000
   .success
     color: #008800
+  
 
 /* css for timepicker */
 #ui-datepicker-div
