--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -17,15 +17,32 @@ body {
   #canvas .page {
     float: left;
     width: 320px; }
-    #canvas .page .content {
-      padding: 8px 4px;
-      font-size: 16px; }
     #canvas .page p.error {
       margin-bottom: 0;
       color: #880000; }
 
+#canvas .page .content {
+  padding: 20px 10px;
+  font-size: 14px; }
+  #canvas .page .content input[type=text] {
+    width: 70%;
+    margin: 0px 0px 10px 0px;
+    font-size: 1em; }
+  #canvas .page .content textarea {
+    width: 90%;
+    font-size: 1em;
+    height: 4em; }
+  #canvas .page .content input[type=submit] {
+    margin: 10px 0;
+    font-size: 1em; }
+  #canvas .page .content select {
+    font-size: 1em; }
+  #canvas .page .content .divider {
+    border-top: 1px solid #dddddd;
+    margin: 8px 0; }
+
 .back-bar, .company-info {
-  width: 304px;
+  width: 100%;
   padding: 0 8px;
   background: #3b5998;
   color: white; }
@@ -37,36 +54,39 @@ body {
       font-size: 12px; }
 
 .company-info {
-  padding-left: 4px;
-  width: 308px; }
+  padding-left: 1px;
+  width: 100%; }
   .company-info td {
     vertical-align: center; }
   .company-info .logo {
-    background: no-repeat; }
+    background: no-repeat;
+    vertical-align: top;
+    margin: 2px 0px 2px 0px; }
   .company-info .name {
-    padding-left: 5px;
-    font-size: 17px;
+    padding-left: 8px;
+    font-size: 18px;
     font-weight: bold; }
 
 .tab-bar {
-  background: #3b5998;
+  background: #c4cde0;
   color: white;
-  padding: 0 0 4px 0; }
+  padding: 0;
+  border-top: solid 1px #1d4088;
+  border-bottom: solid 1px #1d4088; }
   .tab-bar table {
     width: 100%;
-    border-bottom: 2px solid #627aad;
-    margin-bottom: 4px; }
+    margin-bottom: 0px; }
   .tab-bar a, .tab-bar a:visited {
-    color: white;
     text-decoration: none; }
-  .tab-bar td {
-    width: 79.25px;
-    padding: 4px 4px 2px 0px;
+  .tab-bar td, .tab-bar td a {
+    width: 25%;
+    padding: 6px 0px;
     text-align: center;
     font-weight: bold;
-    font-size: 12px; }
-    .tab-bar td div {
-      width: 79.25px;
+    font-size: 14px;
+    color: #3b59a0; }
+    .tab-bar td div, .tab-bar td a div {
+      width: 100%;
       word-wrap: break-word; }
   .tab-bar td:hover {
     cursor: pointer; }
@@ -97,7 +117,7 @@ body {
 
 .home-icon {
   float: left;
-  width: 75px;
+  width: 25%;
   height: 102px; }
   .home-icon .inner {
     padding: 7.5px 5.5px 7.5px 5.5px; }
@@ -109,29 +129,37 @@ body {
     .home-icon .icon:hover {
       cursor: pointer; }
   .home-icon .title {
-    width: 64px;
+    width: 100%;
     line-height: 1.2em;
     height: 2.4em;
     overflow: hidden;
     text-align: center;
-    font-size: 11px;
+    font-size: 12px;
     word-wrap: break-word; }
 
 .mobile-footer {
+  width: 100%;
   height: 70px;
-  padding: 12px 0 0 0; }
+  padding: 12px 0 0 0;
+  background: #c4cde0;
+  border-top: solid 1px #1d4088;
+  border-bottom: solid 1px #1d4088; }
   .mobile-footer p {
     margin: 0 0 10px 0;
     padding-left: 5px; }
   .mobile-footer .powered-by {
     font-size: 11px;
-    text-align: center; }
+    text-align: center;
+    color: white; }
 
 #templates {
   display: none; }
 
 #aritcaptcha-container {
   height: 60px; }
+  #aritcaptcha-container input[type=text] {
+    width: 100px !important;
+    margin: 5px 0 0 0 !important; }
 
 .social-share {
   margin: 0;
@@ -148,6 +176,12 @@ body {
 .page .content.leave_msg textarea[name="feedback"] {
   width: 95%; }
 
+.page .content.hours .day-name {
+  width: 95px;
+  font-weight: bold;
+  float: left; }
+.page .content.hours .day-hours {
+  float: left; }
 .page .content.hours .closed {
   color: #aa0000; }
 .page .content.hours .open {
@@ -166,7 +200,7 @@ body {
 .page .content.category, .page .content.page_tree {
   padding: 0 !important; }
   .page .content.category .item, .page .content.page_tree .item {
-    padding: 8px 0 8px 12px;
+    padding: 8px 12px;
     font-size: 18px; }
     .page .content.category .item img, .page .content.page_tree .item img {
       max-height: 290px;
@@ -191,3 +225,17 @@ body {
     border-top: 1px solid #b3b3b3;
     background: #dddddd;
     margin: 0; }
+
+.page .content.category .name {
+  float: left;
+  width: 75%;
+  margin-bottom: 4px;
+  padding-right: 4px;
+  font-size: 16px;
+  font-weight: bold; }
+.page .content.category .price {
+  font-size: 16px; }
+.page .content.category .desc {
+  width: 75%;
+  padding-top: 4px;
+  font-size: 16px; }
