--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -21,15 +21,32 @@ body
   .page
     float: left
     width: $dynamic-width
-    .content
-      padding: 8px 4px
-      font-size: 16px
     p.error
       margin-bottom: 0
       color: #880000
 
+#canvas .page .content
+  padding: 20px 10px
+  font-size: 14px
+  input[type=text]
+    width: 70%
+    margin: 0px 0px 10px 0px
+    font-size: 1em
+  textarea
+    width: 90%
+    font-size: 1em
+    height: 4em
+  input[type=submit]
+    margin: 10px 0
+    font-size: 1em
+  select
+    font-size: 1em
+  .divider
+    border-top: 1px solid #ddd
+    margin: 8px 0
+
 .back-bar
-  width: $dynamic-width - 16px
+  width: 100%
   padding: 0 8px
   background: $color-topbar
   color: #fff
@@ -42,36 +59,39 @@ body
 
 .company-info
   @extend .back-bar
-  padding-left: 4px
-  width: $dynamic-width - 12px
+  padding-left: 1px
+  width: 100%
   td
     vertical-align: center
   .logo
     background: no-repeat
+    vertical-align: top
+    margin: 2px 0px 2px 0px
   .name
-    padding-left: 5px
-    font-size: 17px
+    padding-left: 8px
+    font-size: 18px
     font-weight: bold
 
 .tab-bar
-  background: $color-topbar
+  background: #C4CDE0
   color: #fff
-  padding: 0 0 4px 0
+  padding: 0
+  border-top: solid 1px #1D4088
+  border-bottom: solid 1px #1D4088
   table
     width: 100%
-    border-bottom: 2px solid #627aad
-    margin-bottom: 4px
+    margin-bottom: 0px
   a, a:visited
-    color: #fff
     text-decoration: none
-  td
-    width: ($emulator-width - 8 - 15) / 4
-    padding: 4px 4px 2px 0px
+  td, td a
+    width: 25%
+    padding: 6px 0px
     text-align: center
     font-weight: bold
-    font-size: 12px
+    font-size: 14px
+    color: #3B59A0
     div
-      width: ($emulator-width - 8 - 15) / 4
+      width: 100%
       word-wrap: break-word
   td:hover
     cursor: pointer
@@ -103,7 +123,7 @@ body
 
 .home-icon
   float: left
-  width: 75px
+  width: 25%
   height: 102px
   .inner
     padding: 7.5px 5.5px 7.5px 5.5px
@@ -115,29 +135,37 @@ body
     &:hover
       cursor: pointer
   .title
-    width: 64px
+    width: 100%
     line-height: 1.2em
     height: 2.4em
     overflow: hidden
     text-align: center
-    font-size: 11px
+    font-size: 12px
     word-wrap: break-word
 
 .mobile-footer
+  width: 100%
   height: 70px
   padding: 12px 0 0 0
+  background: #C4CDE0
+  border-top: solid 1px #1D4088
+  border-bottom: solid 1px #1D4088
   p
     margin: 0 0 10px 0
     padding-left: 5px
   .powered-by
     font-size: 11px
     text-align: center
+    color: #fff
 
 #templates
   display: none
 
 #aritcaptcha-container
   height: 60px
+  input[type=text]
+    width: 100px !important
+    margin: 5px 0 0 0 !important
 
 .social-share
   margin: 0
@@ -160,6 +188,12 @@ body
     width: 95%
 
 .page .content.hours
+  .day-name
+    width: 95px
+    font-weight: bold
+    float: left
+  .day-hours
+    float: left
   .closed
     color: #aa0000
   .open
@@ -179,7 +213,7 @@ body
 .page .content.category, .page .content.page_tree
   padding: 0 !important
   .item
-    padding: 8px 0 8px 12px
+    padding: 8px 12px
     font-size: 18px
     img
       max-height: 290px
@@ -204,3 +238,18 @@ body
     border-top: 1px solid #b3b3b3
     background: #ddd
     margin: 0
+
+.page .content.category
+  .name
+    float: left
+    width: 75%
+    margin-bottom: 4px
+    padding-right: 4px
+    font-size: 16px
+    font-weight: bold
+  .price
+    font-size: 16px
+  .desc
+    width: 75%
+    padding-top: 4px
+    font-size: 16px
