--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -209,6 +209,14 @@ body
     text-align: center
     .map-link
       margin: 10px 0
+  .directions
+    margin-top: 15px
+    .banner
+      padding: 2px 0
+      margin-bottom: 4px
+      background: #C4CDE0
+      color: #3C59A0
+      font-weight: bold
 
 .page .content.category, .page .content.page_tree
   padding: 0 !important
