--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -13,8 +13,8 @@ script.menu-item-dialog(type="text/template")
     br
     textarea.item-input name="desc" {{ _maybe.desc }}
     br
-    | <% if (_maybe.addButtonText) { %>
-    input.lfloat type="button" value="{{ addButtonText }}" name="add" style="margin:10px 15px 0 2px"
+    | <% if (mode == 'add') { %>
+    input.lfloat type="button" value="Add" name="add" style="margin:10px 15px 0 2px"
     | <% } %>
 
     | <% if(flash.error) { %>
@@ -46,8 +46,8 @@ script.services-item-dialog(type="text/template")
     br
     textarea.item-input name="desc" {{ _maybe.desc }}
     br
-    | <% if (_maybe.addButtonText) { %>
-    input.lfloat type="button" value="{{ addButtonText }}" name="add" style="margin:10px 15px 0 2px"
+    | <% if (mode == 'add') { %>
+    input.lfloat type="button" value="Add" name="add" style="margin:10px 15px 0 2px"
     | <% } %>
     
     | <% if(flash.error) { %>
@@ -79,8 +79,8 @@ script.products-item-dialog(type="text/template")
     br
     textarea.item-input name="desc" {{ _maybe.desc }}
     br
-    | <% if (_maybe.addButtonText) { %>
-    input.lfloat type="button" value="{{ addButtonText }}" name="add" style="margin:10px 15px 0 2px"
+    | <% if (mode == 'add') { %>
+    input.lfloat type="button" value="Add" name="add" style="margin:10px 15px 0 2px"
     | <% } %>
     
     | <% if(flash.error) { %>
@@ -124,8 +124,8 @@ script.property-listings-item-dialog(type="text/template")
     br
     textarea.item-input name="desc" {{ _maybe.desc }}
     br
-    | <% if (_maybe.addButtonText) { %>
-    input.lfloat type="button" value="{{ addButtonText }}" name="add" style="margin:10px 15px 0 2px"
+    | <% if (mode == 'add') { %>
+    input.lfloat type="button" value="Add" name="add" style="margin:10px 15px 0 2px"
     | <% } %>
     
     | <% if(flash.error) { %>
@@ -159,10 +159,10 @@ script.locations-item-dialog(type="text/template")
     br
     label Additional Information
     br
-    textarea.item-input name="info" {{ _maybe.info }}
+    textarea.item-input name="info" {{ _maybe.desc }}
     br
-    | <% if (_maybe.addButtonText) { %>
-    input.lfloat type="button" value="{{ addButtonText }}" name="add" style="margin:10px 15px 0 2px"
+    | <% if (mode == 'add') { %>
+    input.lfloat type="button" value="Add" name="add" style="margin:10px 15px 0 2px"
     | <% } %>
     
     | <% if(flash.error) { %>
@@ -205,13 +205,18 @@ script.products-item
 
 script.property-listings-item
   .item class="{{ cycle }}"
-    div {{ item.name }}
+    .name {{ item.name }}
+    .clearfix
+    a href="http://maps.google.com/maps?q={{ item.address }}" target="_blank" {{ item.address }}
+    div {{ item.price }}
     | <% if (item.photo_url) { %>
-    img src="{{ item.photo_url }}"
+    a href="{{ item.photo_url }}" View Property
     | <% } %>
-    div MLS# {{ item.mls }}
-    div Price: {{ item.price }}
-    div Description: {{ item.desc }}
+    .mls
+      ' MLS #:
+      a href="http://www.realtor.com/search/searchresults.aspx?mlslid={{ item.mls }}" {{ item.mls }}
+    .desc
+      | {{ item.desc }}
 
 script.locations-item
   .item class="{{ cycle }}"
@@ -222,3 +227,4 @@ script.locations-item
     div
       ' Address:
       a href="http://maps.google.com/maps?q={{ item.address }}" target="_blank" {{ item.address }}
+    .desc {{ desc }}
