--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -28,6 +28,8 @@ body
 #canvas .page .content
   padding: 20px 10px
   font-size: 14px
+  label
+    margin-bottom: 2px
   input[type=text]
     width: 70%
     margin: 0px 0px 10px 0px
@@ -41,6 +43,7 @@ body
     font-size: 1em
   select
     font-size: 1em
+    margin: 0 0 10px 0
   .divider
     border-top: 1px solid #ddd
     margin: 8px 0
@@ -150,13 +153,15 @@ body
   background: #C4CDE0
   border-top: solid 1px #1D4088
   border-bottom: solid 1px #1D4088
+  color: #3B59A0
+  a, a:visited
+    color: #3B59A0
   p
     margin: 0 0 10px 0
     padding-left: 5px
   .powered-by
     font-size: 11px
     text-align: center
-    color: #fff
 
 #templates
   display: none
@@ -222,7 +227,7 @@ body
   padding: 0 !important
   .item
     padding: 8px 12px
-    font-size: 18px
+    font-size: 16px
     img
       max-height: 290px
       max-width: 290px
