--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -84,6 +84,8 @@ body
   table
     width: 100%
     margin-bottom: 0px
+    tr
+      height: 36px
   a, a:visited
     text-decoration: none
   td, td a
@@ -251,6 +253,8 @@ body
     border-top: 1px solid #b3b3b3
     background: #ddd
     margin: 0
+  .leaf-content, h3
+    padding: 0 10px
 
 .page .content.category
   .name
