Updated share buttons

--- a/app/views/builder/_social-share.html.erb
+++ b/app/views/builder/_social-share.html.erb
@@ -9,16 +9,11 @@ title = u "YoMobi - The Ultimate Mobile Website Builder"
 %>
 
 <ul class="social-share">
-  <li style="padding-top: 7px">Share:</li>
-  <li><a rel="nofollow"  target="_blank" href="http://www.facebook.com/share.php?u=<current_url>&amp;t=<current_page_title>" title="Facebook"><img src="/images/share/facebook.png" title="Facebook" alt="Facebook" /></a></li>
-
-  <li><a rel="nofollow"  target="_blank" href="http://twitter.com/home?status=<current_page_title>-<current_url>" title="Twitter"><img src="/images/share/twitter.png" title="Twitter" alt="Twitter" /></a></li>
-
-  <li><a rel="nofollow"  target="_blank" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=<current_url>&amp;title=<current_page_title>&amp;source=YoMobi&amp;summary=This%20site%20is%20interesting." title="LinkedIn"><img src="/images/share/linkedin.png" title="LinkedIn" alt="LinkedIn" /></a></li>
-
-  <li><a rel="nofollow"  target="_blank" href="http://www.stumbleupon.com/submit?url=<current_page_url>&amp;title=<current_page_title>" title="StumbleUpon"><img src="/images/share/stumbleupon.png" title="StumbleUpon" alt="StumbleUpon" /></a></li>
-
-  <li><a rel="nofollow"  target="_blank" href="http://www.google.com/bookmarks/mark?op=edit&amp;bkmk=<current_url>&amp;title=<current_page_title>&amp;annotation=This%20site%20os%20interesting." title="Google"><img src="/images/share/google.png" title="Google Bookmarks" alt="Google Bookmarks" /></a></li>
-
-  <li><a rel="nofollow"  target="_blank" href="mailto:?subject=<current_page_title>&amp;body=http%3A%2F%2F<current_url>" title="email"><img src="/images/share/email.png" title="email" alt="email" /></a></li>
+  <li style="padding-top: 4px">Share:</li>
+  <li><span  class='st_facebook_button' displayText='Facebook'></span></li>
+  <li><span  class='st_twitter_button' displayText='Tweet'></span></li>
+  <li><span  class='st_linkedin_button' displayText='LinkedIn'></span></li>
+  <li><span  class='st_stumbleupon_button' displayText='StumbleUpon'></span></li>
+  <li><span  class='st_google_button' displayText='Google'></span></li>
+  <li><span  class='st_email_button' displayText='Email'></span></li>
 </ul>
