More more more meeting ui tweaks

--- a/app/views/builder/_social-share.html.erb
+++ b/app/views/builder/_social-share.html.erb
@@ -9,7 +9,7 @@ title = u "YoMobi - The Ultimate Mobile Website Builder"
 %>
 
 <ul class="social-share">
-  <li style="padding-top: 4px">Share:</li>
+  <li style="padding-top: 3px;font-size:14px">Share:</li>
   <li><span  class='st_facebook_button' displayText='Facebook'></span></li>
   <li><span  class='st_twitter_button' displayText='Tweet'></span></li>
   <li><span  class='st_linkedin_button' displayText='LinkedIn'></span></li>
