--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -150,6 +150,8 @@
   .edit-area
     padding: 20px 0
     margin: 0 auto
+    label
+      font-size: 14px
     textarea
       width: 354px
       height: 6em
