--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -6,6 +6,9 @@ body
   margin: 0
   padding: 0
 
+a img
+  border: none
+
 #mobile-container
   position: relative
   width: $dynamic-width
@@ -260,13 +263,13 @@ body
   .name
     float: left
     width: 75%
-    margin-bottom: 4px
-    padding-right: 4px
+    padding-right: 12px
     font-size: 16px
     font-weight: bold
   .price
     font-size: 16px
   .desc
     width: 75%
+    margin-top: 0
     padding-top: 4px
-    font-size: 16px
+    font-size: 15px
