--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -2,6 +2,9 @@ body {
   margin: 0;
   padding: 0; }
 
+a img {
+  border: none; }
+
 #mobile-container {
   position: relative;
   width: 320px;
@@ -246,13 +249,13 @@ body {
 .page .content.category .name {
   float: left;
   width: 75%;
-  margin-bottom: 4px;
-  padding-right: 4px;
+  padding-right: 12px;
   font-size: 16px;
   font-weight: bold; }
 .page .content.category .price {
   font-size: 16px; }
 .page .content.category .desc {
   width: 75%;
+  margin-top: 0;
   padding-top: 4px;
-  font-size: 16px; }
+  font-size: 15px; }
