--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -14,6 +14,9 @@ a, a:visited
 a:hover
   text-decoration: underline
 
+a img
+  border: none
+
 hr
   color: #ccc
 
@@ -147,12 +150,12 @@ p.success
 
 .social-share
   margin: 0
-  padding: 0 0 0 5px
+  padding: 0 0 0 0
   list-style: none
   li
     float: left
     cursor: pointer
-    margin-right: 8px
+    margin-right: 4px !important // important to override mobile.sass
 
 .hr
   border-top: 1px solid $light-border
