--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -229,7 +229,7 @@ a img
       font-weight: bold
 
 .page .content.category, .page .content.page_tree
-  padding: 0 !important
+  padding: 0 0 20px 0 !important
   .item
     padding: 8px 12px
     font-size: 16px
@@ -266,6 +266,9 @@ a img
     padding-right: 12px
     font-size: 16px
     font-weight: bold
+  .name.long
+    width: 100%
+    padding: 0
   .price
     font-size: 16px
   .desc
@@ -273,3 +276,5 @@ a img
     margin-top: 0
     padding-top: 4px
     font-size: 15px
+  .desc.long
+    width: 100%
