--- a/app/views/mobile/aritcaptcha.slim
+++ b/app/views/mobile/aritcaptcha.slim
@@ -1,3 +1,3 @@
 hr
-label Please solve the following equation:
-= raw aritcaptcha_tag :format => "image", :operations => [:add, :sub]
+label Please solve this security question:
+= raw aritcaptcha_tag :format => "image", :operations => [:add, :sub], :max => 10
