--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -208,7 +208,7 @@
         label Message Content:
         textarea name="feedback" rows=5
         #aritcaptcha-container
-        span.response.error
+        p.response.error
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
       h3 Thanks for your input. We'll be sure to contact you later if needed.
@@ -286,7 +286,7 @@
         | &nbsp;&frasl;&nbsp;
         = select_tag 'date[y]', options_for_select(2011..2012,Date.today.year)
         br
-        span.response
+        p.error.response
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
       h3 Your booking request has been sent.
@@ -311,8 +311,7 @@
         br
         | <% } %>
         #aritcaptcha-container
-        span.response.error
-        br
+        p.response.error
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
       h3 = "Thanks! You'll be kept up to date with #{@company.name} news."
