--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -15,7 +15,7 @@ ul
     a href=builder_main_path(:anchor => 'edit-settings') General Settings
   li.option.text class=active?('booster',active)
     .icon
-    a href=builder_booster_path Traffic Booster
+    a href=builder_main_path(:anchor => 'edit-keywords') Traffic Booster
   li.option.edit-tab-bar
     .icon
     a href=builder_main_path(:anchor => 'edit-tab-bar') Edit / Arrange Mobile Tab Bar
