--- a/app/views/user_mailer/tell_friend.html.erb
+++ b/app/views/user_mailer/tell_friend.html.erb
@@ -1,4 +1,5 @@
 <p>
-  Your friend <%= @params[:friend_name] %> recommends this site to you
-  <a href="<%= @params[:company_mobile_url] %>"><%= @params[:company_mobile_url] %></a>
+  Your friend <%= @params[:friend_name] %> with email address as <%= @params[:email_from] %>, recommends this mobile site to you: <a href="<%= @params[:company_mobile_url] %>"><%= @params[:company_mobile_url] %></a>
 </p>
+
+<p>Mobilize yourself or your business and make it accessible to mobile devices for free. Free account at: <a href="http://www.yomobi.com">YoMobi.com</a></p>
