--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -24,7 +24,15 @@
     #home-widgets.content.dbx-group
     - if @is_mobile && !@logged_in
       .ad-bar.bottom
-        = raw AdMob::request(request, session[:session_id]) if session[:session_id]
+        div align="center"
+        javascript:
+          window.googleAfmcRequest = {
+            client: 'ca-mb-pub-2309168908133247',
+            format: '320x50_mb',
+            output: 'html',
+            slotname: '7752788998'
+          };
+        script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_afmc_ads.js"
     - if @is_mobile
       .mobile-footer
         = render 'mobile/social-share'
