--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -72,28 +72,44 @@
         | General Settings
       p.help-text
         em Change your Business name and logo
-    div class="edit-area"
-      = form_tag '/builder/settings', :multipart => true, do
-        label Company Name:
+    div class="edit-area edit-settings"
+      .box style="margin-bottom:10px"
+        label Mobile Site URL:
+        br
+        input type="text" value=@company.mobile_url data-orig-val=@company.mobile_url
+        .divider
+
+        label class="help" Desktop Redirect Code:
+        img class="help-bubble" src="/images/ui/help-bubble.png"
+        textarea data-orig-val=desktop_redirect_code(@company) = desktop_redirect_code @company
+      
+      = form_tag '/builder/settings', :multipart => true, :class => 'box' do
+        label Site Name:
         input type="text" name="company_name" value=@company.name maxlength="40"
+        .divider
+
+        label Site Type:
         br
-        br
-        label Company Type:
         = select_tag :company_type, options_for_select(company_types,@company.company_type_id)
-        br
-        br
-        label Current Logo:
+        .divider
+
+        label Site Picture:
         br
         img.logo{src=@company.logo.url(:mobile) }
         br
-        label Upload a new one:
+        label Select a new picture (3MB max):
+        br.clearfix
+
+        input.rfloat type="submit" value="Upload"
         input type="file" name="logo"
-        input type="submit" value="Upload"
-        .action-bar style="padding-right: 0"
+        .clearfix
+
+        .action-bar
           p.error.lfloat style="margin-top:2px"
           .accept-btn.main-btn
             input.content type="submit" value="Save Settings"
           .loader
+          .clearfix
   
   script.edit-keywords(type="text/template")
     .header.edit-keywords
