--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -248,7 +248,7 @@ a img {
 
 .page .content.category .name {
   float: left;
-  width: 75%;
+  width: 70%;
   padding-right: 12px;
   font-size: 16px;
   font-weight: bold; }
@@ -256,6 +256,7 @@ a img {
   width: 100%;
   padding: 0; }
 .page .content.category .price {
+  float: right;
   font-size: 16px; }
 .page .content.category .desc {
   width: 75%;
