--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -26,7 +26,7 @@ a img {
 
 #canvas .page .content {
   padding: 20px 10px;
-  font-size: 14px; }
+  font-size: 16px; }
   #canvas .page .content label {
     margin-bottom: 2px; }
   #canvas .page .content input[type=text] {
@@ -47,21 +47,24 @@ a img {
     border-top: 1px solid #dddddd;
     margin: 8px 0; }
 
-.back-bar, .company-info {
+.back-bar {
   width: 100%;
-  padding: 0 8px;
-  background: #3b5998;
-  color: white; }
-  .back-bar .title, .company-info .title {
+  padding: 0;
+  margin: 12px 0 0 0;
+  background: url(/images/ui/bg-back-bar.png) repeat-x;
+  color: gray; }
+  .back-bar .title {
     padding-top: 3px;
     height: 36px; }
-    .back-bar .title h3, .company-info .title h3 {
+    .back-bar .title h3 {
       font-weight: bold;
       font-size: 12px; }
 
 .company-info {
-  padding-left: 1px;
-  width: 100%; }
+  width: 100%;
+  padding-left: 0 1px 0 8px;
+  background: #3b5998;
+  color: white; }
   .company-info td {
     vertical-align: center; }
   .company-info .logo {
@@ -110,10 +113,13 @@ a img {
 
 .back-btn {
   float: left;
-  width: 50px;
-  height: 30px;
-  margin: 4px 8px 0 0;
-  background: url(/images/back-btn.png) no-repeat; }
+  width: 48px;
+  height: 38px;
+  border-right: 1px solid gray;
+  margin: 0 12px 0 1px;
+  padding: 0;
+  background: url(/images/ui/back-btn.png) no-repeat;
+  background-position: center; }
 
 .title h2, .title h3 {
   margin: 9px 0 0 15px;
